--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 html {
-  overflow-x:hidden;
+  max-width: 100vw;
+  touch-action: pan-y;
+
 }
 body {
   margin: 0;
@@ -7,7 +9,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;  overflow-x: hidden;
   
 }
 .App {
